# langsky-dataset-generator

./: LICENSE  README.md  pyproject.toml
lookups/: epf_correlation.json  epf_quintile_params.json  tier1_pool.json  tier2_templates.json
src/: budgets.py  census.py  config.py  constants.py  merchants.py
